updated the MlpExperiment file

--- a/MlpExperiment.ipynb
+++ b/MlpExperiment.ipynb
@@ -167,12 +167,12 @@
    },
    "outputs": [],
    "source": [
-    "experiment_name = 'test_Mlp_7'\n",
+    "experiment_name = 'test_Mlp_1'\n",
     "\n",
     "\n",
     "# Mlp parameters\n",
     "depth = {'distribution': 'categorical', 'values':[2,3,4,5,6,7,8,9,10,11,12]}\n",
-    "layer_size = {'distribution': 'categorical', 'values':[64, 128, 256, 512]}\n",
+    "hidden_dim = {'distribution': 'categorical', 'values':[64, 128, 256, 512]}\n",
     "seed = {'distribution': 'constant', 'value': 42}\n",
     "regularize = {'distribution': 'categorical', 'values':[None, None, None, 0.25, 0.5, 0.75, 'bn', 'bn','bn']} # float implies dropout\n",
     "embd_size = {'distribution': 'categorical', 'values':[None, None, None, 'sqrt', 64, 128, 256]} # 'sqrt implies embedding is sqrt smaller than the number of categories\n",
@@ -182,29 +182,10 @@
     "lr = {'distribution': 'log_uniform', 'min':1e-5, 'max':1e-2}\n",
     "momentum = {'distribution': 'categorical', 'values':[0, 0.5, 0.9]}\n",
     "no_cuda = {'distribution': 'constant', 'value': False}\n",
-    "lr_step_size = {'distribution': 'constant', 'value': [0, 20, 30]}\n",
-    "gamma = {'distribution': 'constant', 'value': [0.2, 0.1, 0.05]}\n",
+    "lr_step_size = {'distribution': 'categorical', 'values':[0, 20, 30]}\n",
+    "gamma = {'distribution':'categorical', 'values':[0.2, 0.1, 0.05]}\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "p = {'distribution': 'categorical', 'values':[0, 0, 0.25, 0.5, 0.75]} # 40% probability of no regularisation\n",
-    "hidden_dim = {'distribution': 'constant', 'value': 1} # Assertion error coming from Net if not 1\n",
-    "anneal = {'distribution': 'constant', 'value': 'none'}\n",
-    "optimizer = {'distribution': 'categorical', 'values': ['SGD', 'SGD', 'SGD', 'SGD', 'AMSGrad']} # 80% of SGD and 20% AMSGrad\n",
-    "batch_size = {'distribution': 'constant', 'value': 64}\n",
-    "epochs = {'distribution': 'constant', 'value': 30}\n",
-    "lr = {'distribution': 'log_uniform', 'min':0.05, 'max':0.2} # yields mean = 0.1082, median 0.1\n",
-    "momentum = {'distribution': 'constant', 'value': 0.9}\n",
-    "no_cuda = {'distribution': 'constant', 'value': False}\n",
-    "lr_step_size = {'distribution': 'constant', 'value': 10}\n",
-    "gamma = {'distribution': 'constant', 'value': 0.1}\n",
-    "\n",
-    "# Regression:\n",
-    "back_n_reg = {'distribution': 'categorical', 'values':[0, 1, 2, 3, 4]}\n",
-    "\n",
-    "# Classification:\n",
-    "back_n_cls = {'distribution': 'constant', 'value': 0}"
+    "\n"
    ]
   },
   {
@@ -230,19 +211,15 @@
    "outputs": [],
    "source": [
     "#============================================================\n",
-    "# Locally Constant Networks\n",
+    "# MLP on datasets containing categorical variables\n",
     "#============================================================\n",
-    "LCN_reg_space = {\n",
+    "Mlp_relu_cat_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n_reg,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_constant'},\n",
+    "    'regularize':regularize,\n",
+    "    'embd_size':embd_size,\n",
+    "    'activation': {'distribution': 'constant', 'value': 'relu'},\n",
     "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
     "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
@@ -250,21 +227,16 @@
     "    'momentum': momentum,\n",
     "    'no_cuda': no_cuda,\n",
     "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
+    "    'gamma': gamma\n",
     "    }\n",
     "\n",
-    "LCN_cls_space = {\n",
+    "Mlp_sigm_cat_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n_cls,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_constant'},\n",
+    "    'regularize':regularize,\n",
+    "    'embd_size':embd_size,\n",
+    "    'activation': {'distribution': 'constant', 'value': 'sigmoid'},\n",
     "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
     "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
@@ -272,25 +244,20 @@
     "    'momentum': momentum,\n",
     "    'no_cuda': no_cuda,\n",
     "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'classification'}\n",
+    "    'gamma': gamma\n",
     "}\n",
     "\n",
     "#============================================================\n",
-    "# Locally Linear Networks\n",
+    "# MLP on continous predictors\n",
     "#============================================================\n",
     "\n",
-    "LLN_reg_space = {\n",
+    "Mlp_relu_cont_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n_reg,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
+    "    'regularize':regularize,\n",
+    "    'embd_size': {'distribution': 'constant', 'value': None},\n",
+    "    'activation': {'distribution': 'constant', 'value': 'relu'},\n",
     "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
     "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
@@ -298,22 +265,17 @@
     "    'momentum': momentum,\n",
     "    'no_cuda': no_cuda,\n",
     "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
-    "    }\n",
+    "    'gamma': gamma\n",
+    "}\n",
     "\n",
     "\n",
-    "LLN_cls_space = {\n",
+    "Mlp_sigm_cont_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n_cls,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
+    "    'regularize':regularize,\n",
+    "    'embd_size': {'distribution': 'constant', 'value': None},\n",
+    "    'activation': {'distribution': 'constant', 'value': 'sigmoid'},\n",
     "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
     "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
@@ -321,9 +283,8 @@
     "    'momentum': momentum,\n",
     "    'no_cuda': no_cuda,\n",
     "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'classification'}\n",
-    "    }"
+    "    'gamma': gamma\n",
+    "}"
    ]
   },
   {
@@ -349,10 +310,10 @@
    "outputs": [],
    "source": [
     "model_groups = {\n",
-    "    'LCN_reg':{'model':'LCN_reg', 'hype':LCN_reg_space},\n",
-    "    'LCN_cls':{'model':'LCN_cls', 'hype':LCN_cls_space},\n",
-    "    'LLN_reg':{'model':'LLN_reg', 'hype':LLN_reg_space},\n",
-    "    'LLN_cls':{'model':'LLN_cls', 'hype':LLN_cls_space}\n",
+    "    'Mlp_relu_cat':{'model':'Mlp_relu_cat', 'hype':Mlp_relu_cat_space},\n",
+    "    'Mlp_sigm_cat':{'model':'Mlp_sigm_cat', 'hype':Mlp_sigm_cat_space},\n",
+    "    'Mlp_relu_cont':{'model':'Mlp_relu_cont', 'hype':Mlp_relu_cont_space},\n",
+    "    'Mlp_sigm_cont':{'model':'Mlp_sigm_cont', 'hype':Mlp_sigm_cont_space}\n",
     "}\n",
     "\n",
     "ex.def_model_groups(model_groups)"
@@ -388,14 +349,14 @@
     "ex.def_data_groups_opml()\n",
     "print(f'automatically defined data groups: {ex.data_groups.keys()}')\n",
     "\n",
-    "classification_models = [k for k in model_groups.keys() if '_cls' in k]\n",
-    "regression_models = [k for k in model_groups.keys() if '_reg' in k]\n",
+    "categorical_models = [k for k in model_groups.keys() if '_cat' in k]\n",
+    "continous_models = [k for k in model_groups.keys() if '_cont' in k]\n",
     "\n",
     "\n",
-    "applications = {'opml_reg_purnum_group': regression_models,\n",
-    "                'opml_reg_numcat_group': regression_models,\n",
-    "                'opml_class_purnum_group': classification_models,\n",
-    "                'opml_class_numcat_group': classification_models}\n",
+    "applications = {'opml_reg_purnum_group': continous_models,\n",
+    "                'opml_reg_numcat_group': categorical_models,\n",
+    "                'opml_class_purnum_group': continous_models,\n",
+    "                'opml_class_numcat_group': categorical_models}\n",
     "\n",
     "ex.def_applications(applications)\n",
     "ex.reg_experiment(experiment_name)"
@@ -530,14 +491,15 @@
     "pytorch_data_class = CustomCategoricalSplitDataset\n",
     "to_pytorch_datasets = toPyTorchDatasets(wrapper = pytorch_data_class)\n",
     "\n",
+    "\n",
     "# Transformations will be called after general pre-processing steps, and in order they're added\n",
-    "data_pre_processing.add_pre_processing_step('LCN_reg', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('Mlp_relu_cat', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing_step('LCN_cls', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('Mlp_sigm_cat', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing_step('LLN_reg', to_pytorch_datasets)\n",
+    "data_pre_processing.add_pre_processing_step('Mlp_relu_cont', to_pytorch_datasets)\n",
     "\n",
-    "data_pre_processing.add_pre_processing_step('LLN_cls', to_pytorch_datasets)"
+    "data_pre_processing.add_pre_processing_step('Mlp_sigm_cont', to_pytorch_datasets)"
    ]
   },
   {
@@ -566,19 +528,19 @@
    },
    "outputs": [],
    "source": [
-    "from metrics.LcnMetrics import LcnMetricsClassification, LcnMetricsRegression\n",
+    "from metrics.MlpMetrics import MlpMetricsClassification, MlpMetricsRegression\n",
     "\n",
-    "lcn_metrics_regression = LcnMetricsRegression()\n",
-    "lcn_metrics_classification = LcnMetricsClassification()\n",
+    "mlp_metrics_regression = MlpMetricsRegression()\n",
+    "mlp_metrics_classification = MlpMetricsClassification()\n",
     "\n",
-    "lcn_metrics = {'regression': lcn_metrics_regression,\n",
-    "               'classification': lcn_metrics_classification}\n",
+    "mlp_metrics = {'regression': mlp_metrics_regression,\n",
+    "               'classification': mlp_metrics_classification}\n",
     "\n",
     "metric_model_pairs = {\n",
-    "    'LCN_reg': lcn_metrics,\n",
-    "    'LCN_cls': lcn_metrics,\n",
-    "    'LLN_reg': lcn_metrics,\n",
-    "    'LLN_cls': lcn_metrics\n",
+    "    'Mlp_relu_cat': mlp_metrics,\n",
+    "    'Mlp_sigm_cat': mlp_metrics,\n",
+    "    'Mlp_relu_cont': mlp_metrics,\n",
+    "    'Mlp_sigm_cont': mlp_metrics,\n",
     "}"
    ]
   },
@@ -608,16 +570,16 @@
    },
    "outputs": [],
    "source": [
-    "from models.LcnNetwork import init_LcnNetwork\n",
-    "from training.LcnTrain import LcnTrainingRoutine\n",
+    "from models.MlpNetwork import init_MlpNetwork\n",
+    "from training.MlpTrain import MlpTrainingRoutine\n",
     "\n",
-    "lcn_model_and_training = {'model_init':init_LcnNetwork, 'training_routine': LcnTrainingRoutine}\n",
+    "mlp_model_and_training = {'model_init':init_MlpNetwork, 'training_routine': MlpTrainingRoutine}\n",
     "\n",
     "model_training_pairs = {\n",
-    "    'LCN_reg': lcn_model_and_training,\n",
-    "    'LCN_cls': lcn_model_and_training,\n",
-    "    'LLN_reg': lcn_model_and_training,\n",
-    "    'LLN_cls': lcn_model_and_training\n",
+    "    'Mlp_relu_cat': mlp_model_and_training,\n",
+    "    'Mlp_sigm_cat': mlp_model_and_training,\n",
+    "    'Mlp_relu_cont': mlp_model_and_training,\n",
+    "    'Mlp_sigm_cont': mlp_model_and_training,\n",
     "}"
    ]
   },
@@ -648,7 +610,7 @@
    },
    "outputs": [],
    "source": [
-    "torch_models = ('LCN_reg', 'LCN_cls', 'LLN_reg', 'LLN_cls')\n",
+    "torch_models = ('Mlp_relu_cat', 'Mlp_sigm_cat', 'Mlp_relu_cont', 'Mlp_sigm_cont')\n",
     "\n",
     "sklearn_models = ('no_sklearn_models_in_this_training')\n",
     "\n",
@@ -660,9 +622,9 @@
     "    hyperparameters = run_info['hyp']\n",
     "    model_name = run_info['model']\n",
     "\n",
-    "    # Don't forget to add a task to hypeparams ----\n",
+    "    if hyperparameters.get('task') is None:\n",
+    "        hyperparameters['task'] = run_info['task']\n",
     "    task = hyperparameters['task']\n",
-    "    # ---------------------------------------------\n",
     "    seed = hyperparameters['seed']\n",
     "\n",
     "\n",
