--- a/MlpExperiment.ipynb
+++ b/MlpExperiment.ipynb
@@ -167,23 +167,23 @@
    },
    "outputs": [],
    "source": [
-    "experiment_name = 'test_Mlp_1'\n",
+    "experiment_name = 'test_Mlp_2'\n",
     "\n",
     "\n",
     "# Mlp parameters\n",
     "depth = {'distribution': 'categorical', 'values':[2,3,4,5,6,7,8,9,10,11,12]}\n",
-    "hidden_dim = {'distribution': 'categorical', 'values':[64, 128, 256, 512]}\n",
+    "hidden_dim = {'distribution': 'categorical', 'values':[32, 64, 128, 256, 512]}\n",
     "seed = {'distribution': 'constant', 'value': 42}\n",
     "regularize = {'distribution': 'categorical', 'values':[None, None, None, 0.25, 0.5, 0.75, 'bn', 'bn','bn']} # float implies dropout\n",
     "embd_size = {'distribution': 'categorical', 'values':[None, None, None, 'sqrt', 64, 128, 256]} # 'sqrt implies embedding is sqrt smaller than the number of categories\n",
     "optimizer = {'distribution': 'categorical', 'values': ['SGD', 'SGD', 'SGD', 'SGD', 'Adam']}\n",
     "batch_size = {'distribution': 'categorical', 'values':[64, 128, 256, 512, 1024]}\n",
-    "epochs = {'distribution': 'categorical', 'values':[60, 90, 120, 150]}\n",
+    "epochs = {'distribution': 'categorical', 'values': 30}\n",
     "lr = {'distribution': 'log_uniform', 'min':1e-5, 'max':1e-2}\n",
-    "momentum = {'distribution': 'categorical', 'values':[0, 0.5, 0.9]}\n",
+    "momentum = {'distribution': 'categorical', 'values': [0.5, 0.9]}\n",
     "no_cuda = {'distribution': 'constant', 'value': False}\n",
-    "lr_step_size = {'distribution': 'categorical', 'values':[0, 20, 30]}\n",
-    "gamma = {'distribution':'categorical', 'values':[0.2, 0.1, 0.05]}\n",
+    "lr_step_size = {'distribution': 'constant', 'value': 10}\n",
+    "gamma = {'distribution': 'constant', 'value': 0.1}\n",
     "\n",
     "\n"
    ]
@@ -322,28 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 69
-    },
-    "executionInfo": {
-     "elapsed": 1771,
-     "status": "ok",
-     "timestamp": 1693527178212,
-     "user": {
-      "displayName": "bartosz azaniux",
-      "userId": "12656151146140381527"
-     },
-     "user_tz": -60
-    },
-    "id": "BFVftUr4EMSr",
-    "outputId": "096cceb4-bd60-4c4c-f052-fc8967518e9f",
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "ex.def_data_groups_opml()\n",
@@ -364,32 +342,17 @@
     "\n",
     "# Required to distinguish between classification or regression tasks\n",
     "regression_tasks = ex.__dict__['data_groups']['opml_reg_purnum_group'] + ex.__dict__['data_groups']['opml_reg_numcat_group']"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 517,
-     "status": "ok",
-     "timestamp": 1693527178723,
-     "user": {
-      "displayName": "bartosz azaniux",
-      "userId": "12656151146140381527"
-     },
-     "user_tz": -60
-    },
-    "id": "-I95Kh4qMo1u",
-    "outputId": "db2495fa-b945-4480-e310-32f6e368c0c3",
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "exp_info = ex.experiment_info()\n",
@@ -397,33 +360,29 @@
     "required_runs = exp_info['required_runs']\n",
     "print('successful runs: {}'.format(successful_runs))\n",
     "print('total required runs: {}'.format(required_runs))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# 2. General Data pre-processing"
+   ],
    "metadata": {
-    "id": "kLkZmpB9yVys",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "# 2. General Data pre-processing"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "from NeuralNetworksTrainingPackage.event_handler import dataPreProcessingEventEmitter\n",
@@ -463,32 +422,29 @@
     "data_pre_processing.add_pre_processing_step('classification', to_data_frame)\n",
     "data_pre_processing.add_pre_processing_step('classification', balanced_split_train_val_test)\n",
     "data_pre_processing.add_pre_processing_step('classification', quantile_transform)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# 3. Model Specific Data pre-processing"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "# 3. Model Specific Data pre-processing"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import CustomCategoricalSplitDataset, toPyTorchDatasets\n",
@@ -505,32 +461,29 @@
     "data_pre_processing.add_pre_processing_step('Mlp_relu_cont', to_pytorch_datasets)\n",
     "\n",
     "data_pre_processing.add_pre_processing_step('Mlp_sigm_cont', to_pytorch_datasets)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# 4. Model Metrics"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "# 4. Model Metrics"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "from metrics.MlpMetrics import MlpMetricsClassification, MlpMetricsRegression\n",
@@ -547,32 +500,29 @@
     "    'Mlp_relu_cont': mlp_metrics,\n",
     "    'Mlp_sigm_cont': mlp_metrics,\n",
     "}"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# 5. Model Training routine"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "# 5. Model Training routine"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "from models.MlpNetwork import init_MlpNetwork\n",
@@ -586,33 +536,29 @@
     "    'Mlp_relu_cont': mlp_model_and_training,\n",
     "    'Mlp_sigm_cont': mlp_model_and_training,\n",
     "}"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "# 6. Main Experiment loop"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "# 6. Main Experiment loop"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "AJKPv2m6nFzd",
-    "outputId": "36bedcf2-a3b9-4b13-81f1-43c5b157c89f",
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "torch_models = ('Mlp_relu_cat', 'Mlp_sigm_cat', 'Mlp_relu_cont', 'Mlp_sigm_cont')\n",
@@ -725,29 +671,29 @@
     "                print(final_metrics)\n",
     "\n",
     "    ex.end_run()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Checking whether the code works as intended"
+   ],
    "metadata": {
-    "id": "fsz24ztP9CQ8",
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "## Checking whether the code works as intended"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# torch_models = ('LCN_reg', 'LCN_cls', 'LLN_reg', 'LLN_cls')\n",
@@ -854,17 +800,17 @@
     "#                 print(final_metrics)\n",
     "\n",
     "#     ex.end_run()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# torch_models = ('LCN_reg', 'LCN_cls', 'LLN_reg', 'LLN_cls')\n",
@@ -972,17 +918,17 @@
     "#                 print(final_metrics)\n",
     "\n",
     "#     # ex.end_run()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# class oneHotEncodeTargets():\n",
@@ -1008,17 +954,17 @@
     "#         return X, y, categorical_indicator, attribute_names\n",
     "    \n",
     "# one_hot_encode_targets = oneHotEncodeTargets()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "#     hyperparameters = run_info['hyp']\n",
@@ -1050,61 +996,61 @@
     "    \n",
     "# #     print(train_data.Y)\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# data_pre_processing.events"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# hyperparameters"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
     "#X_c, y_c, categorical_indicator_c, attribute_names_c = deepcopy(X), deepcopy(y), deepcopy(categorical_indicator), deepcopy(attribute_names)\n",
     "X, y, categorical_indicator, attribute_names = deepcopy(X_c), deepcopy(y_c), deepcopy(categorical_indicator_c), deepcopy(attribute_names_c)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# from NeuralNetworksTrainingPackage.event_handler import dataPreProcessingEventEmitter\n",
@@ -1179,17 +1125,17 @@
     "# data_pre_processing.add_pre_processing_step('LLN_reg', to_pytorch_datasets)\n",
     "\n",
     "# data_pre_processing.add_pre_processing_step('LLN_cls', to_pytorch_datasets)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "data_pre_processing.set_seed_for_all(seed)\n",
@@ -1197,159 +1143,221 @@
     "data_pre_processing.apply('classification')\n",
     "data_pre_processing.apply(model_name)\n",
     "train_data, val_data, test_data = data_pre_processing.get_train_val_test()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=train_batch_size,shuffle= True)\n",
     "val_dataloader = torch.utils.data.DataLoader(val_data,batch_size=len(val_data),shuffle= True)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_data,batch_size=len(test_data),shuffle= True)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "X, y, categorical_indicator, attribute_names = train_data"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "print(X.shape)\n",
     "print(X_c.shape)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "non_categorical_columns = [attr for attr, is_cat in zip(attribute_names, categorical_indicator) if not is_cat]\n",
     "print(X[non_categorical_columns].mean())\n",
     "print(X[non_categorical_columns].nunique())"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "non_categorical_columns = [attr for attr, is_cat in zip(attribute_names_c, categorical_indicator_c) if not is_cat]\n",
     "print(X_c[non_categorical_columns].mean())\n",
     "print(X_c[non_categorical_columns].nunique())"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "print(X.loc[:, categorical_indicator].nunique())\n",
     "print(X_c.loc[:, categorical_indicator_c].nunique())"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "y.value_counts()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "val_data = data_pre_processing.get('val')\n",
     "test_data = data_pre_processing.get('test')\n",
     "print(val_data[1].value_counts())\n",
     "print(test_data[1].value_counts())"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "type(train_data.Y)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "for data, target in train_dataloader:\n",
     "    print(target)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "'336-361072' in regression_tasks"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "hyperparameters"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_info"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ex.__dict__['data_groups']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
