starting mlp experiments

--- a/MlpExperiment.ipynb
+++ b/MlpExperiment.ipynb
@@ -167,7 +167,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment_name = 'test_Mlp_6'\n",
+    "experiment_name = 'Mlp_experiment_1'\n",
     "\n",
     "\n",
     "# Mlp parameters\n",
@@ -680,7 +680,7 @@
     "                epoch_metrics.update(train_loss)\n",
     "                epoch_metrics.update({'epoch': epoch})\n",
     "                ex.update_run(epoch_metrics)\n",
-    "                print(epoch_metrics)\n",
+    "                # print(epoch_metrics)\n",
     "\n",
     "            else:\n",
     "                final_metrics = {}\n",
