--- a/results/ResultsQuery.ipynb
+++ b/results/ResultsQuery.ipynb
@@ -52,6 +52,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'expname': None,\n 'model_groups': None,\n 'data_groups': None,\n 'applications': None,\n 'run_id': None,\n 'stuck_task': '',\n 'prev_task': '',\n 'prev_X': None,\n 'prev_Y': None,\n 'prev_categorical_indicator': None,\n 'prev_attribute_names': None,\n 'orchname': 'bart',\n 'orchseceret': 'b8d206dce517c35e156cf7a5da01fc7b2fb095ae05028968ed6ba3be211df85f2dbc59b232bd53520206a1c73c65f14f9b266d9aeeadcc38e5a525c306e65628',\n 'openMLAPIKey': None,\n 'verbose': True,\n 'suites_ids': [336, 335, 337, 334],\n 'suites': [],\n 'taskID_suite': [],\n 'runs_per_pair': 60}"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex = ExperimentClient(verbose = True)\n",
+    "ex.define_orch_cred(usr_name, tabExpTrackAPIKey)\n",
+    "ex.__dict__"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "outputs": [
     {
@@ -185,20 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "              model     dataset   \n0     Mlp_sigm_cont  337-361275  \\\n1      Mlp_relu_cat  334-361110   \n2     Mlp_sigm_cont  336-361074   \n3      Mlp_sigm_cat  335-361104   \n4      Mlp_relu_cat  335-361097   \n...             ...         ...   \n5674  Mlp_sigm_cont  336-361073   \n5675  Mlp_sigm_cont  336-361073   \n5676  Mlp_relu_cont  336-361073   \n5677  Mlp_sigm_cont  336-361073   \n5678  Mlp_relu_cont  336-361073   \n\n                                        hyperparameters   \n0     {'depth': 12, 'seed': 42, 'regularize': None, ...  \\\n1     {'depth': 9, 'seed': 42, 'regularize': 0.25, '...   \n2     {'depth': 9, 'seed': 42, 'regularize': None, '...   \n3     {'depth': 8, 'seed': 42, 'regularize': None, '...   \n4     {'depth': 6, 'seed': 42, 'regularize': 'bn', '...   \n...                                                 ...   \n5674  {'depth': 4, 'seed': 42, 'regularize': 'bn', '...   \n5675  {'depth': 9, 'seed': 42, 'regularize': 'bn', '...   \n5676  {'depth': 9, 'seed': 42, 'regularize': 0.25, '...   \n5677  {'depth': 11, 'seed': 42, 'regularize': 'bn', ...   \n5678  {'depth': 6, 'seed': 42, 'regularize': 0.5, 'e...   \n\n                                                metrics  \n0     {'train_loss': 0.0007977968439989739, 'train_m...  \n1     {'train_loss': 0.0006932403922080994, 'train_m...  \n2     {'train_loss': 4.652510661565851e-05, 'train_m...  \n3     {'train_loss': 1.2292179851531981, 'train_metr...  \n4     {'train_loss': 174.63632300779395, 'train_metr...  \n...                                                 ...  \n5674  {'train_loss': 2244.5784549479167, 'train_metr...  \n5675  {'train_loss': 1735.5242615234374, 'train_metr...  \n5676  {'train_loss': 1759.5997970703124, 'train_metr...  \n5677  {'train_loss': 1735.5493530598958, 'train_metr...  \n5678  {'train_loss': 1794.9439686197916, 'train_metr...  \n\n[5679 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model</th>\n      <th>dataset</th>\n      <th>hyperparameters</th>\n      <th>metrics</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Mlp_sigm_cont</td>\n      <td>337-361275</td>\n      <td>{'depth': 12, 'seed': 42, 'regularize': None, ...</td>\n      <td>{'train_loss': 0.0007977968439989739, 'train_m...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Mlp_relu_cat</td>\n      <td>334-361110</td>\n      <td>{'depth': 9, 'seed': 42, 'regularize': 0.25, '...</td>\n      <td>{'train_loss': 0.0006932403922080994, 'train_m...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Mlp_sigm_cont</td>\n      <td>336-361074</td>\n      <td>{'depth': 9, 'seed': 42, 'regularize': None, '...</td>\n      <td>{'train_loss': 4.652510661565851e-05, 'train_m...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Mlp_sigm_cat</td>\n      <td>335-361104</td>\n      <td>{'depth': 8, 'seed': 42, 'regularize': None, '...</td>\n      <td>{'train_loss': 1.2292179851531981, 'train_metr...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Mlp_relu_cat</td>\n      <td>335-361097</td>\n      <td>{'depth': 6, 'seed': 42, 'regularize': 'bn', '...</td>\n      <td>{'train_loss': 174.63632300779395, 'train_metr...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5674</th>\n      <td>Mlp_sigm_cont</td>\n      <td>336-361073</td>\n      <td>{'depth': 4, 'seed': 42, 'regularize': 'bn', '...</td>\n      <td>{'train_loss': 2244.5784549479167, 'train_metr...</td>\n    </tr>\n    <tr>\n      <th>5675</th>\n      <td>Mlp_sigm_cont</td>\n      <td>336-361073</td>\n      <td>{'depth': 9, 'seed': 42, 'regularize': 'bn', '...</td>\n      <td>{'train_loss': 1735.5242615234374, 'train_metr...</td>\n    </tr>\n    <tr>\n      <th>5676</th>\n      <td>Mlp_relu_cont</td>\n      <td>336-361073</td>\n      <td>{'depth': 9, 'seed': 42, 'regularize': 0.25, '...</td>\n      <td>{'train_loss': 1759.5997970703124, 'train_metr...</td>\n    </tr>\n    <tr>\n      <th>5677</th>\n      <td>Mlp_sigm_cont</td>\n      <td>336-361073</td>\n      <td>{'depth': 11, 'seed': 42, 'regularize': 'bn', ...</td>\n      <td>{'train_loss': 1735.5493530598958, 'train_metr...</td>\n    </tr>\n    <tr>\n      <th>5678</th>\n      <td>Mlp_relu_cont</td>\n      <td>336-361073</td>\n      <td>{'depth': 6, 'seed': 42, 'regularize': 0.5, 'e...</td>\n      <td>{'train_loss': 1794.9439686197916, 'train_metr...</td>\n    </tr>\n  </tbody>\n</table>\n<p>5679 rows × 4 columns</p>\n</div>"
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'mlp_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mmlp_df\u001B[49m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'mlp_df' is not defined"
+     ]
     }
    ],
    "source": [
-    "mlp_df"
+    "print(mlp_df)"
    ],
    "metadata": {
     "collapsed": false,
